apps/cara-queue/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cara-queue
  labels:
    pod-security.kubernetes.io/enforce: baseline
