apps/cara-queue/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cara-queue
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  ingressClassName: nginx
  tls:
    - secretName: cara-queue-tls
      hosts:
        - cara-queue.192.168.105.200.nip.io
  rules:
    - host: cara-queue.192.168.105.200.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
